--- a/styles.css
+++ b/styles.css
@@ -174,5 +174,77 @@ html {
     height: 100%;
     object-fit: cover;
 }
+
+span.swiper-pagination-bullet {
+    width: 2rem;
+    height: 2rem;
+    opacity: 1;
+    margin-right: 1.5rem !important;
+    background-color: #fff;
+    position: relative;
+}
+
+
+span.swiper-pagination-bullet::after {
+    content: "";
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    border: 0.2rem solid #fff;
+}
+
+
+span.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: #c49b63;
+}
+
+span.swiper-pagination-bullet.swiper-pagination-bullet-active::after {
+    border: 0.2rem solid #c49b63;
+}
+
+.landing-contact {
+    position: absolute;
+    top: 85%;
+    left: 0;
+    width: 100%;
+    height: 15vh;
+    background-color: #000;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #fff;
+}
+
+.details {
+    display: flex;
+}
+
+.details i {
+    font-size: 2rem;
+    color: #c49b63;
+    margin-right: 2rem;
+}
+
+.details div {
+    display: flex;
+    flex-direction: column;
+}
+
+.details div span:nth-child(1) {
+    font-size: 1.6rem;
+    color: #fff;
+    margin-bottom: 0.5rem;
+}
+
+.details div span:nth-child(2) {
+    font-size: 1.4rem;
+    color: #bbb;
+    width: 30rem;
+}
 /* End of Landing */
 /* End of Container */
