--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,13 @@ html {
   justify-content: space-evenly;
   align-items: center;
   border-bottom: 0.1rem solid rgba(255, 255, 255, 0.1);
+  transition: all 0.5s;
+  z-index: 300;
+}
+
+.sticky.navbar {
+    height: 8rem;
+    background-color: #000;
 }
 
 .logo {
@@ -377,4 +384,71 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active::after {
   transform: scale(1.3);
 }
 /* End of Menu */
+
+/* Data */
+.data {
+    width: 100%;
+    height: 50vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
+    url(images/image7.jpg) center no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.data > div {
+    width: 25rem;
+    height: 30rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.icon-wrapper {
+    width: 8rem;
+    height: 8rem;
+    cursor: pointer;
+    position: relative;
+}
+
+.icon-bg {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 0.1rem solid #c49b63;
+    transition: all 0.3s;
+}
+
+.data i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+    -webkit-text-stroke: 0.2rem #c49b63;
+    color: transparent;
+    z-index: 100;
+}
+
+.icon-wrapper:hover .icon-bg {
+    background-color: #c49b63;
+    transform: rotateZ(135deg);
+}
+
+.icon-wrapper:hover i {
+    -webkit-text-stroke: 0.2rem #2a2727;
+}
+
+.num {
+    font-size: 3rem;
+    color: #c49b63;
+}
+
+.info {
+    font-size: 1.8rem;
+    color: #999;
+}
+/* End of Data */
 /* End of Container */
