--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,8 @@ html {
 }
 
 .sticky.navbar {
-    height: 8rem;
-    background-color: #000;
+  height: 8rem;
+  background-color: #000;
 }
 
 .logo {
@@ -387,242 +387,396 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active::after {
 
 /* Data */
 .data {
-    width: 100%;
-    height: 50vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
+  width: 100%;
+  height: 50vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)),
     url(images/image7.jpg) center no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .data > div {
-    width: 25rem;
-    height: 30rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+  width: 25rem;
+  height: 30rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .icon-wrapper {
-    width: 8rem;
-    height: 8rem;
-    cursor: pointer;
-    position: relative;
+  width: 8rem;
+  height: 8rem;
+  cursor: pointer;
+  position: relative;
 }
 
 .icon-bg {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border: 0.1rem solid #c49b63;
-    transition: all 0.3s;
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: 0.1rem solid #c49b63;
+  transition: all 0.3s;
 }
 
 .data i {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 3rem;
-    -webkit-text-stroke: 0.2rem #c49b63;
-    color: transparent;
-    z-index: 100;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 3rem;
+  -webkit-text-stroke: 0.2rem #c49b63;
+  color: transparent;
+  z-index: 100;
 }
 
 .icon-wrapper:hover .icon-bg {
-    background-color: #c49b63;
-    transform: rotateZ(135deg);
+  background-color: #c49b63;
+  transform: rotateZ(135deg);
 }
 
 .icon-wrapper:hover i {
-    -webkit-text-stroke: 0.2rem #2a2727;
+  -webkit-text-stroke: 0.2rem #2a2727;
 }
 
 .num {
-    font-size: 3rem;
-    color: #c49b63;
+  font-size: 3rem;
+  color: #c49b63;
 }
 
 .info {
-    font-size: 1.8rem;
-    color: #999;
+  font-size: 1.8rem;
+  color: #999;
 }
 /* End of Data */
 
 /* Customers */
 .customers {
-    width: 100%;
-    height: 70vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
+  width: 100%;
+  height: 70vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)),
     url(images/image8.jpg) center no-repeat;
   background-size: cover;
   position: relative;
 }
 
 .customers-banner {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
 }
 
 .customers-banner .main-heading {
-    font-size: 6rem;
-    position: relative;
-    z-index: 10;
+  font-size: 6rem;
+  position: relative;
+  z-index: 10;
 }
 
 .customers-banner h1 {
-    font-size: 6rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    color: #fff;
-    margin-top: -4rem;
+  font-size: 6rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #fff;
+  margin-top: -4rem;
 }
 
 .clients {
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    align-items: flex-end;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: flex-end;
 }
 
 .client {
-    width: 25%;
-    height: 25rem;
-    background-color: #c49b63;
-    padding: 2rem;
-    color: #fff;
-    position: relative;
+  width: 25%;
+  height: 25rem;
+  background-color: #c49b63;
+  padding: 2rem;
+  color: #fff;
+  position: relative;
 }
 
 .client:nth-child(2) {
-    height: 31rem;
+  height: 31rem;
 }
 
 .client:nth-child(4) {
-    height: 21rem;
+  height: 21rem;
 }
 
 .client:nth-child(even) {
-    opacity: 0.9;
+  opacity: 0.9;
 }
 
 .client p {
-    font-size: 1.6rem;
-    margin-bottom: 2rem;
+  font-size: 1.6rem;
+  margin-bottom: 2rem;
 }
 
 .client div {
-    position: absolute;
-    bottom: 2rem;
-    display: flex;
-    align-items: center;
+  position: absolute;
+  bottom: 2rem;
+  display: flex;
+  align-items: center;
 }
 
 .client img {
-    width: 5rem;
-    height: 5rem;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-right: 2rem;
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-right: 2rem;
 }
 
 .client div span {
-    font-size: 1.4rem;
-    text-transform: uppercase;
+  font-size: 1.4rem;
+  text-transform: uppercase;
 }
 /* End of Customers */
 
 /* Contact */
 .contact {
+  width: 100%;
+  height: 60vh;
+  background-color: #000;
+  display: flex;
+}
+
+.contact-left {
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
+    url(images/image1.jpg) center no-repeat;
+  background-size: cover;
+}
+
+.contact-right {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact-right h1 {
+  font-size: 4rem;
+  font-weight: 300;
+  color: #fff;
+  margin: 0 0 3rem 2rem;
+}
+
+.input-group {
+  display: flex;
+}
+
+.input-group input,
+textarea {
+  width: 30rem;
+  height: 5rem;
+  padding: 1rem 1rem 2rem 0;
+  margin: 2rem;
+  background-color: transparent;
+  border: none;
+  border-bottom: 0.1rem solid rgba(255, 255, 255, 0.3);
+  color: #fff;
+}
+
+.input-group textarea {
+  resize: none;
+  height: 5rem;
+}
+
+textarea::-webkit-scrollbar {
+  display: none;
+}
+
+.input-group input::placeholder,
+.input-group textarea::placeholder {
+  color: #fff;
+}
+
+.contact-btn {
+  width: 30rem;
+  height: 6rem;
+  background-color: #c49b63;
+  color: #2a2727;
+  margin: 1rem 2rem;
+  border: none;
+  cursor: pointer;
+}
+/* End of Contact */
+
+/* Footer */
+footer {
+  width: 100%;
+  height: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #262626;
+}
+
+.copyright {
+  font-size: 1.6rem;
+  color: #999;
+}
+/* End of Footer */
+/* End of Container */
+
+/* Responsive */
+@media (max-width: 1500px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 1300px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 1100px) {
+  html {
+    font-size: 45%;
+  }
+  .menu-img-wrapper {
+    width: 18rem;
+    height: 18rem;
+  }
+
+  .customers {
+    height: 120vh;
+  }
+
+  .clients {
+    flex-direction: column;
+  }
+
+  .client {
     width: 100%;
-    height: 60vh;
-    background-color: #000;
-    display: flex;
+    height: 15rem;
   }
-  
+
+  .client:nth-child(2) {
+    height: 15rem;
+  }
+
+  .client:nth-child(4) {
+    height: 15rem;
+  }
+
   .contact-left {
-    width: 50%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
-      url(images/image1.jpg) center no-repeat;
-    background-size: cover;
-  }
-  
-  .contact-right {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .contact-right h1 {
-    font-size: 4rem;
-    font-weight: 300;
-    color: #fff;
-    margin: 0 0 3rem 2rem;
-  }
-  
-  .input-group {
-    display: flex;
-  }
-  
-  .input-group input,
-  textarea {
-    width: 30rem;
-    height: 5rem;
-    padding: 1rem 1rem 2rem 0;
-    margin: 2rem;
-    background-color: transparent;
-    border: none;
-    border-bottom: 0.1rem solid rgba(255, 255, 255, 0.3);
-    color: #fff;
-  }
-  
-  .input-group textarea {
-    resize: none;
-    height: 5rem;
-  }
-  
-  textarea::-webkit-scrollbar {
     display: none;
   }
-  
-  .input-group input::placeholder,
-  .input-group textarea::placeholder {
-    color: #fff;
-  }
-  
-  .contact-btn {
-    width: 30rem;
-    height: 6rem;
-    background-color: #c49b63;
-    color: #2a2727;
-    margin: 1rem 2rem;
-    border: none;
-    cursor: pointer;
-  }
-  /* End of Contact */
-  
-  /* Footer */
-  footer {
+
+  .contact-right {
     width: 100%;
-    height: 10rem;
-    display: flex;
-    justify-content: center;
+  }
+
+  .input-group input,
+  textarea,
+  .contact-btn {
+    width: 40rem;
+  }
+}
+
+@media (max-width: 900px) {
+  .landing-contact div span:nth-child(2) {
+    display: none;
+  }
+  .menu-right {
+    display: none;
+  }
+
+  .menu-left {
+    width: 100%;
+    text-align: center;
+    margin-right: 0;
+  }
+
+  .menu-left p {
+    margin: 2rem auto 4rem auto;
+  }
+
+  .customers {
+    height: 140vh;
+  }
+
+  .customers-banner p {
+    width: 60rem;
+  }
+
+  .client {
+    height: 18rem;
+  }
+
+  .client:nth-child(2) {
+    height: 18rem;
+  }
+
+  .client:nth-child(4) {
+    height: 18rem;
+  }
+
+  .contact {
+    height: 80%;
+  }
+
+  .input-group {
+    flex-direction: column;
+  }
+
+  .input-group input,
+  textarea,
+  .contact-btn {
+    width: 60rem;
+  }
+}
+
+@media (max-width: 600px) {
+  html {
+    font-size: 35%;
+  }
+
+  .landing-contact {
+    height: 19rem;
+    flex-direction: column;
     align-items: center;
-    background-color: #262626;
   }
-  
-  .copyright {
-    font-size: 1.6rem;
-    color: #999;
+  .details div {
+    width: 20rem;
   }
-  /* End of Footer */
-/* End of Container */
+
+  .about {
+    height: 80vh;
+    flex-direction: column;
+  }
+
+  .about div {
+    width: 60rem;
+    margin: 0 2rem;
+  }
+
+  .customers {
+    height: 110vh;
+  }
+}
+
+@media (max-width: 450px) {
+  .logo {
+    display: none;
+  }
+
+  .input-group input,
+  textarea,
+  .contact-btn {
+    width: 50rem;
+  }
+}
+
+/* End of Responsive */
